// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alias findById should return only one alias 1`] = `
Object {
  "aliasId": 1,
  "createdAt": Object {},
  "createdBy": 1,
  "description": "test",
  "enabled": true,
  "name": "test",
  "sceneId": 1,
  "updatedAt": Object {},
}
`;

exports[`Alias findByIdAndUpdate should update a alias 1`] = `
Object {
  "aliasId": 1,
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "test",
  "enabled": true,
  "name": "updated",
  "sceneId": 1,
  "updatedAt": Any<Date>,
}
`;

exports[`Alias save should save a new alias 1`] = `
Object {
  "aliasId": 3,
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "test",
  "enabled": false,
  "name": "test_3",
  "sceneId": 1,
  "updatedAt": Any<Date>,
}
`;
